# ImCoolBar

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ImCoolBar.cpp  ImCoolBar.h  ImCoolbar.cpp  ImCoolbar.h  LICENSE  README.md  main.cpp  submodules.init.txt
.github/workflows/: Linux.yml  Osx.yml  Win.yml  codeql-analysis.yml  linux.yml  osx.yml  win.yml
cmake/: 3rdparty.cmake  freetype.cmake  glad.cmake  glfw.cmake  imgui.cmake  implot.cmake
src/: frame.cpp  frame.h
